--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
   },
+  "homepage": "http://www.ryanisler.com/projects/calculator",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
